--- a/Assets/Code/Tools/Tools.asmdef
+++ b/Assets/Code/Tools/Tools.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "Tools"
+    "name": "Tools",
+    "rootNamespace": "",
+    "references": [
+        "GUID:4f7740168b372b14dbdb05ba393e5660"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
