--- a/Assets/Code/Tools/Tools.asmdef
+++ b/Assets/Code/Tools/Tools.asmdef
@@ -2,7 +2,8 @@
     "name": "Tools",
     "rootNamespace": "",
     "references": [
-        "GUID:4f7740168b372b14dbdb05ba393e5660"
+        "GUID:4f7740168b372b14dbdb05ba393e5660",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
