--- a/Assets/Code/UI/UIModel/UIModel.asmdef
+++ b/Assets/Code/UI/UIModel/UIModel.asmdef
@@ -5,7 +5,8 @@
         "GUID:4f7740168b372b14dbdb05ba393e5660",
         "GUID:96c517900980b21498cad2d52b1eb438",
         "GUID:45d69e54d04d71846bbef156f1fead9b",
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
