--- a/Assets/Code/UI/UIView/UIView.asmdef
+++ b/Assets/Code/UI/UIView/UIView.asmdef
@@ -5,7 +5,8 @@
         "GUID:4f7740168b372b14dbdb05ba393e5660",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:45d69e54d04d71846bbef156f1fead9b",
-        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
